# Argus

./: .gitignore  README.md  README_EN.md  argus项目介绍.md  pyproject.toml  项目简历.md
.github/workflows/: ci.yml
.trae/specs/build-argus-from-nanobot/: checklist.md  spec.md  tasks.md
argus/: __init__.py  i18n.py
argus/adapters/: __init__.py  llm_agent.py  mock_agent.py  nanobot_agent.py
argus/cli/: __init__.py  main.py
argus/config/: __init__.py  loader.py  schema.py
argus/core/: __init__.py  bus.py  human.py  meeting.py  message.py  orchestrator.py  router.py  tree.py
argus/gui/: __init__.py  server.py
argus/memory/: __init__.py  store.py
config/: example_config.json  example_tree.yaml
docs/: ARCHITECTURE.md  QUICKSTART.md  showcase.md  showcase_en.md
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.vue  api.ts  i18n.ts  styles.css  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src/components/: ChatView.vue  MeetingView.vue  StatusView.vue  TreeEditor.vue
memory/team/: best_practices.md  lessons_learned.md
scripts/: capture_meeting_only.py  capture_screenshots.py  generate_showcase_images.py  start_gui_for_demo.py  validate_human_features.py
tests/adapters/: test_llm_agent.py
tests/cli/: test_cli.py
tests/config/: test_schema.py
tests/core/: test_bus.py  test_human.py  test_meeting.py  test_orchestrator.py
tests/e2e/: test_e2e_group_chat.py  test_e2e_meeting.py  test_e2e_memory.py  test_e2e_private_chat.py
tests/gui/: test_server.py
